@@ -245,6 +245,13 @@ static void PopupMenuPositionFunc(GtkMenu* menu, gint *x, gint *y, gboolean *pus
     *pushIn = FALSE;
 }
 
+static Node* getFocusedNode(Frame* frame)
+{
+    if (Document* doc = frame->document())
+        return doc->focusedNode();
+    return 0;
+}
+
 static gboolean webkit_web_view_forward_context_menu_event(WebKitWebView* webView, const PlatformMouseEvent& event)
 {
     Page* page = core(webView);
@@ -340,9 +347,14 @@ static gboolean webkit_web_view_popup_menu_handler(GtkWidget* widget)
     IntPoint location;
 
     if (!start.node() || !end.node()
-        || (frame->selection()->selection().isCaret() && !frame->selection()->selection().isContentEditable()))
-        location = IntPoint(rightAligned ? view->contentsWidth() - contextMenuMargin : contextMenuMargin, contextMenuMargin);
-    else {
+        || (frame->selection()->selection().isCaret() && !frame->selection()->selection().isContentEditable())) {
+        // If there's a focused elment, use its location.
+        if (Node* focusedNode = getFocusedNode(frame)) {
+            IntRect focusedNodeRect = focusedNode->getRect();
+            location = IntPoint(rightAligned ? focusedNodeRect.right() : focusedNodeRect.x(), focusedNodeRect.bottom());
+        } else
+            location = IntPoint(rightAligned ? view->contentsWidth() - contextMenuMargin : contextMenuMargin, contextMenuMargin);
+    } else {
         RenderObject* renderer = start.node()->renderer();
         if (!renderer)
             return FALSE;
